# PAMSI_Projekt1

./: CMakeLists.txt  main.cpp
inc/: Heap.h  Intro.h  Merge.h  Quick.h  Sort.h
src/: Heap.cpp  Intro.cpp  Merge.cpp  Quick.cpp  Sort.cpp
